--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Train model
         run: |
           # Your ML workflow goes here
+          pip install --upgrade pip
           pip install -r requirements.txt
           python stage.ipynb
      
